# BioX

./: README.md  install.bat  install.sh  pyproject.toml  setup.py
biox/: __init__.py  annotation.py  biox.py  dna.py  file.py  protein.py  quality.py  rna.py
src/: __init__.py  annotation.py  biox.py  dna.py  file.py  lzjd.py  ncd.py  protein.py  quality.py  rna.py  taxonomy.py  tools.py  wbncd.py
test/: SRR31842349.fastq  Test datasets.xlsx  mco_chr1.fasta
tree_test/: CanisFamiliaris.fasta  GallusGallus.fasta  GymnuraAltavela.fasta  PhylloscopusBorealis.fasta  PongoPygmaeus.fasta
